# CMakeList.txt : CMake project for cpp_MSVCwithCMake, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("cpp_MSVCwithCMake")

# Add source to this project's executable.
add_executable (cpp_MSVCwithCMake "cpp_MSVCwithCMake.cpp" "cpp_MSVCwithCMake.h")

# TODO: Add tests and install targets if needed.
